css/my-app.css
/* ... */
/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}

.back div.circle:after{
    content: "";
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    z-index: 5;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0, 0.3);
}

.back div.circle > div{
    z-index: 10;
}

.superTransitionEffect{
    width: 100px;
    height: 100px;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
   -moz-transform: translateY(-50%) translateX(-50%);
   -webkit-transform: translateY(-50%) translateX(-50%);
    z-index: -1;
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    transition: all 1.1s ease-out 0.2s;
    -moz-transition: all 1.1s ease-out 0.2s;
    -webkit-transition: all 1.1s ease-out 0.2s;
    transform-origin: center;
    -moz-transform-origin: center;
    -webkit-transform-origin: center;
    background-color: #fff;
}

.bigCircleForTransition{
    width: 1000px;
    height: 1000px;
    z-index: 20000;
}

.bigCircleForTransition.zeroopacity, .superTransitionEffect.zeroopacity{
    opacity: 0;
}

.height10{
    height: 10px;
}

.height20{
    height: 20px;
}

.height30{
    height: 30px;
}

.height40{
    height: 40px;
}

.height44{
    height: 44px;
}

.height54{
    height: 54px;
}

div.topImage{
    border-bottom: solid 5px #fff;
    overflow: hidden;
    height: 200px;
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
}

div.topImage img.lazy-loaded{
    max-width: 100%;
}

.flexbox {
  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
  display: -ms-flexbox;      /* TWEENER - IE 10 */
  display: -webkit-flex;     /* NEW - Chrome */
  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
.flex1{
    position: relative;
    text-align: left;
    padding: 0 0 0 1em;
    flex: 1;
    -webkit-box-flex: 1;
    -webkit-flex: 1;
    -moz-box-flex: 1;
    align-self: center;
    -webkit-align-self: center;
} 

div.fRow{
    margin-bottom: 6px;
}

div.fRow input.mf-input, div.fRow textarea.mf-textarea, div.fRow select.mf-select{
    font-family: Arial, Helvetica, sans-serif;
    border: none;
    border: 0;
    background-color: #fff;
    font-size: 1rem;
    -webkit-appearance: none;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
}

div#wrapME.wrapAttractions, div#wrapAttendees.wrapAttractions{
    overflow: hidden;
}

div#wrapAttendees.wrapAttractions div.item div.flex1 i.abs{
    right: 0;
}

div#wrapME.wrapAttractions textarea.mf-textarea{
    height: 50px;
}

div.wrapAttractions div.image-holder{
    width: 120px;
    background-color: #172535;
}

div#wrapAttractions.wrapAttractions div.image-holder:after{
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 100%;
    height: 100%;
    width: 4px;
    background-color: #172535;
}

div#wrapSocialMedia.wrapAttractions div.image-holder, div#wrapInfobooth.wrapAttractions div.image-holder, div.wrapAgendaDetails div.image-holder{
    width: 76px;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: auto 60%;
}

div#wrapSocialMedia.wrapAttractions div.image-holder > div, div#wrapInfobooth.wrapAttractions div.image-holder > div, div.wrapAgendaDetails div.image-holder > div{
    width: 76px;
    height: 70px;
    background-color: transparent;
}

div#wrapSocialMedia.wrapAttractions div.image-holder{
    float: left;
}

div#wrapSocialMedia.wrapAttractions div.item > div.relative{
    height: inherit;
    overflow: hidden;
}

div#wrapSocialMedia.wrapAttractions div.item div.flex2{
    width: calc(100% - 76px);
    height: inherit;
    float: right;
    padding: 0 10px;
}

div#wrapSocialMedia.wrapAttractions div.item div.flex2 > div.abs{
    overflow: hidden;
    padding: 0 30px 0 10px;
}

div#wrapSocialMedia.wrapAttractions div.item div.flex2 > div.abs i.abs{
    right: 10px;
}

div#wrapSocialMedia.wrapAttractions div.item div.flex2 > div.abs span{
    display: block;
    position: relative;
    overflow: hidden;
    height: 24px;
}

div.wrapAttractions div.image-holder img{
    max-width: 100%;
}

div.wrapAttractions div.item{
    background-color: #243849;
    height: 86px;
    overflow: hidden;
    margin-bottom: 10px;
}

div#wrapPolls.wrapAttractions div.item{
    background-color: #fff; 
    color: #243849;
}

div#wrapPolls.wrapAttractions div.item[data-answered="1"]{
    background-color: #243849;
    color: #fff;
}

div#wrapSurveys.wrapAttractions div.item{
    height: auto;
    padding: 15px;
    margin-bottom: 20px;
}

div#wrapSurveys.wrapAttractions div.item .collapse{
    display: none;
}

div#wrapSurveys.wrapAttractions div.item .collapse.activated{
    display: block;
}

div#wrapSocialMedia.wrapAttractions div.item, div#wrapInfobooth.wrapAttractions div.item{
    height: 70px;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion h3{
    font-weight: 400;
    font-size: 1rem;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion div.list-block{
    margin: 0;
    padding: 0;
    font-size: 1rem;
    height: auto;
    min-height: 1rem;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion .list-block .item-inner{
    padding-top: 0;
    padding-bottom: 0;
    height: auto;
    min-height: 1rem;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion .list-block .item-content{
    min-height: 2rem;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion h3:before {
    content: attr(data-questionnumber)". ";
    font-weight: 700;
}

div#wrapAttendees div#wrapSurveys.wrapAttractions div.item div.wrapQuestion h3:before{
    display: none;
}

div#wrapSurveys.wrapAttractions div.item div.wrapQuestion .button{
    display: inline-block;
}
/* ... */

